replace headers with jumbotron

--- a/geothermalsite/dashboard/templates/dashboard/jumbotron.html
+++ b/geothermalsite/dashboard/templates/dashboard/jumbotron.html
@@ -1,9 +1,9 @@
 <div class="jumbotron">
-    <h1 class="display-4">Hello, world!</h1>
-    <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+    <h1 class="display-4">Welcome to the Carleton Geothermal Dashboard!</h1>
+    <p class="lead">Oh boy, there are soooo many problems</p>
     <hr class="my-4">
-    <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+    <p>If you would like to learn more about these problems, check out this page!</p>
     <p class="lead">
-      <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+      <a class="btn btn-primary btn-lg" href="{% url 'about' %}" role="button">Problems</a>
     </p>
 </div>
