--- a/geothermalsite/dashboard/templates/dashboard/jumbotron.html
+++ b/geothermalsite/dashboard/templates/dashboard/jumbotron.html
@@ -1,9 +1,16 @@
 <div class="jumbotron">
     <h1 class="display-4">Welcome to the Carleton Geothermal Dashboard!</h1>
-    <p class="lead">Oh boy, there are soooo many problems</p>
+    <p class="lead">Created by the Geothermal CS Comps Team, 2022-23</p>
     <hr class="my-4">
-    <p>If you would like to learn more about these problems, check out this page!</p>
+    <h2 class="text-muted">Disclaimers</h2>
+    <p>One of the difficulties (and joys!) of working with Carleton's Geothermal data is its size and complexity. Here are a few things to know:</p>
+    <ul>
+        <li>This database contains many outages, so certain searches will contain gaps. <a href="{% url 'about' %}">Find out more about data outages.</a></li>
+        <li>This database is big, so searching for data over longer periods of time will, well, take longer! Some may take a matter of seconds, others minutes. Please be patient!</li>
+        <li>This is an ongoing project, so there are many features we hope are implemented in the future.</li>
+    </ul>
     <p class="lead">
-      <a class="btn btn-primary btn-lg" href="{% url 'about' %}" role="button">Problems</a>
+      <a class="btn btn-primary btn-lg" href="{% url 'about' %}" role="button">About</a>
+      <a class="btn btn-primary btn-lg" href="{% url 'tempvsdepth' %}" role="button">Example</a>
     </p>
 </div>
