add query cards to dashboard

--- a/geothermalsite/dashboard/templates/dashboard/index.html
+++ b/geothermalsite/dashboard/templates/dashboard/index.html
@@ -4,6 +4,8 @@
 
     {% include 'dashboard/jumbotron.html' %}
 
+    {% include 'dashboard/querycards.html' %}
+
     {# Query selection dropdown form #}
     <form action="" method="post">
         <br>
