add documentation to jumbotron

--- a/geothermalsite/dashboard/templates/dashboard/jumbotron.html
+++ b/geothermalsite/dashboard/templates/dashboard/jumbotron.html
@@ -1,3 +1,5 @@
+<!-- NOTE: jumbotron is not supported in Bootstrap v5, but is in v4 -->
+
 <div class="jumbotron">
     <h1 class="display-4">Welcome to the Carleton Geothermal Dashboard!</h1>
     <p class="lead">Created by the Geothermal CS Comps Team, 2022-23</p>
