Adjusted the csv download script

--- a/geothermalsite/dashboard/templates/dashboard/tempvstime.html
+++ b/geothermalsite/dashboard/templates/dashboard/tempvstime.html
@@ -43,7 +43,7 @@
 
 
     <div>
-        
+
     <script>
         function downloadData() {
             var queryData = {{queryData | safe}};
@@ -63,18 +63,16 @@
             csv = csv.slice(0, -1) //remove the last comma
             csv += '\n';
             })
-            document.write(csv);  
 
-            var newElement = document.createElement('a');  
-            newElement.href = 'data:text/csv;charset=utf-8,' + encodeURI(csv);  
-            newElement.target = '_blank';  
-            
-            //provide the name for the CSV file to be downloaded  
-            newElement.download = 'tempVsTimeDownload.csv';  
-            newElement.click(); 
+            var newElement = document.createElement('a');
+            newElement.href = 'data:text/csv;charset=utf-8,' + encodeURI(csv);
+
+            //provide the name for the CSV file to be downloaded
+            newElement.download = 'tempVsTime.csv';
+            newElement.click();
         }
     </script>
-    
+
 
         <button onclick="downloadData()">Download data</button>
         <button id="downloadImage" onclick="window.downloadGraphImage()">Download graph</button>
