--- a/geothermalsite/dashboard/templates/dashboard/navbar.html
+++ b/geothermalsite/dashboard/templates/dashboard/navbar.html
@@ -1,3 +1,6 @@
+{% load static %}
+<link rel="stylesheet" href="{% static 'navbar.css' %}">
+
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
       <a class="navbar-brand" href="{% url 'index' %}">Carleton Geothermal Dashboard</a>
