Work in progress

--- a/geothermalsite/dashboard/templates/dashboard/querycards.html
+++ b/geothermalsite/dashboard/templates/dashboard/querycards.html
@@ -2,6 +2,7 @@
 
 <div class="d-flex justify-content-center">
     <!-- The cards currently have hard-coded widths and margins, and changing styles further may warrant a css file. -->
+
     <div class="card" style="width: 18rem; margin: 20px;">
         <img class="card-img-top" src="{% static 'TempVsTime_example.png' %}" alt="TempVsTime visualization example">
         <div class="card-body">
@@ -9,6 +10,7 @@
             <a href="{% url 'tempvstime' %}" class="btn btn-primary stretched-link">Temperature vs. Time</a>
         </div>
     </div>
+
     <div class="card" style="width: 18rem; margin: 20px;">
         <img class="card-img-top" src="{% static 'TempVsTime_example.png' %}" alt="TempVsDepth visualization example">
         <div class="card-body">
@@ -16,4 +18,13 @@
             <a href="{% url 'tempvsdepth' %}" class="btn btn-primary stretched-link">Temperature vs. Depth</a>
         </div>
     </div>
+
+    <div class="card" style="width: 18rem; margin: 20px;">
+        <img class="card-img-top" src="{% static 'TempVsTime_example.png' %}" alt="TempVsDepth visualization example">
+        <div class="card-body">
+            <p class="card-text">Build a query on the database showing temperature variation in the entire borehole over time.</p>
+            <a href="{% url 'stratigraphy' %}" class="btn btn-primary stretched-link">Stratigraphy Graph</a>
+        </div>
+    </div>
+
 </div>
