add back-to-top button to base template
Some things to address are:
- the button is always displayed, but should only be after scrolling 20px, as specified in the JS. Removing the classes "d-flex justify-content-center align-items-center" in the HTML fixes this, but then the icon is not centered within the button.
- I am unsure whether this will work on the other pages, but it should given that it is included on the base template.
- Still need to style the button according to our color scheme.

--- a/geothermalsite/dashboard/templates/dashboard/base.html
+++ b/geothermalsite/dashboard/templates/dashboard/base.html
@@ -30,5 +30,7 @@
         {% block content %}
 
         {% endblock %}
+
+        {% include 'dashboard/back_to_top_button.html' %}
     </body>
 </html>
