add temporary footer - needs styling

--- a/geothermalsite/dashboard/templates/dashboard/base.html
+++ b/geothermalsite/dashboard/templates/dashboard/base.html
@@ -32,5 +32,7 @@
         {% endblock %}
 
         {% include 'dashboard/back_to_top_button.html' %}
+
+        {% include 'dashboard/footer.html' %}
     </body>
 </html>
