--- a/geothermalsite/dashboard/templates/dashboard/footer.html
+++ b/geothermalsite/dashboard/templates/dashboard/footer.html
@@ -1,4 +1,5 @@
-<footer class="bg-info text-center text-lg-start fixed-bottom">
+<footer class="bg-info text-center text-lg-start">
+    {% comment %} took out "fixed-bottom" {% endcomment %}
     <!-- Grid container -->
     <div class="container p-4">
       <!--Grid row-->
