--- a/geothermalsite/dashboard/templates/dashboard/tempvstime.html
+++ b/geothermalsite/dashboard/templates/dashboard/tempvstime.html
@@ -37,40 +37,12 @@
 
     <div>
 
-    <script>
-        function downloadData() {
-            var queryData = {{queryData | safe}};
-            var csv = '';
-            var keys = Object.keys(queryData[0])
-            var keyArray = []
-            keys.forEach(key => {
-                keyArray.push(key)
-            })
-            let keyRow = keyArray.join(",")
-            csv += keyRow + "\n";
+    {% load static %}
 
-            queryData.forEach(row => {
-                let rowElements = []
-                keyArray.forEach(key => {
-                    rowElements.push(row[key])
-                })
-                let csvRow = rowElements.join(",")
-                csv += csvRow
-                csv += '\n'
-            })
+    <script src="{% static 'createCsv.js' %}"></script>
 
-            var newElement = document.createElement('a');
-            newElement.href = 'data:text/csv;charset=utf-8,' + encodeURI(csv);
-
-            //provide the name for the CSV file to be downloaded
-            newElement.download = 'tempVsTime.csv';
-            newElement.click();
-        }
-    </script>
-
-
-        <button onclick="downloadData()">Download data</button>
-        <button id="downloadImage" onclick="window.downloadGraphImage()">Download graph</button>
+    <button onclick="downloadData('tempvstime')">Download data</button>
+    <button id="downloadImage" onclick="window.downloadGraphImage(\"tempvstime\")">Download graph</button>
 
 
     <div class="container">
