confine the forms in tempvstime and tempvsdepth in 80% of the screen width

--- a/geothermalsite/dashboard/templates/dashboard/tempvstime.html
+++ b/geothermalsite/dashboard/templates/dashboard/tempvstime.html
@@ -22,7 +22,7 @@
 {% endblock %}
 
 {% block content %}
-    {% comment %} <button type="button" onclick="window.location.href='/'">Home</button> {% endcomment %}
+    <button type="button" onclick="window.location.href='/'">Home</button>
 
     {% if queryData %}
     <details>
@@ -141,7 +141,7 @@
                     </script>
 
                     <div>
-                        <input type="submit" value="Submit" class="btn btn-secondary form-control"/>
+                        <input type="submit" value="Submit" />
                     </div>
                 </form>
             </div>
