add general style template to base & jumbotron

--- a/geothermalsite/dashboard/templates/dashboard/jumbotron.html
+++ b/geothermalsite/dashboard/templates/dashboard/jumbotron.html
@@ -1,6 +1,8 @@
 <!-- NOTE: jumbotron is not supported in Bootstrap v5, but is in v4 -->
+{% load static %}
+<link rel="stylesheet" href="{% static 'generalSiteStyles.css' %}">
 
-<div class="jumbotron">
+<div class="jumbotron grey-background">
     <h1 class="display-4">Welcome to the Carleton Geothermal Dashboard!</h1>
     <p class="lead">Created by the Geothermal CS Comps Team, 2022-23</p>
     <hr class="my-4">
