--- a/geothermalsite/dashboard/templates/dashboard/base.html
+++ b/geothermalsite/dashboard/templates/dashboard/base.html
@@ -5,6 +5,10 @@
 
         <title>Carleton Geothermal Data</title>
 
+        <!-- Include custom images, css, and js in the static directory -->
+        {% load static %}
+
+        <!-- Block to contain all CSS files, which can be overwritten/extended in child templates -->
         {% block css %}
             <!-- jQuery -->
             <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-datetimepicker/2.5.20/jquery.datetimepicker.min.css" integrity="sha256-DOS9W6NR+NFe1fUhEE0PGKY/fubbUCnOfTje2JMDw3Y=" crossorigin="anonymous" />
@@ -12,8 +16,12 @@
             <!-- Bootstrap 4.0.0 -->
             <!-- Info on customizing Bootstrap CSS: https://blog.hubspot.com/website/how-to-override-bootstrap-css?hubs_content=blog.hubspot.com%2Fwebsite%2Fbootstrap-navbar&hubs_content-cta=How%20to%20Edit%2C%20Customize%2C%20and%20Override%20Bootstrap%20CSS%20to%20Suit%20Your%20Brand -->
             <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-            {% endblock %}
 
+            <!-- Custom site styles -->
+            <link rel="stylesheet" href="{% static 'generalSiteStyles.css' %}"/>
+        {% endblock %}
+
+        <!-- Block to contain all JS files, which can be overwritten/extended in child templates -->
         {% block javascript %}
             <!-- jQuery -->
             <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
@@ -27,8 +35,8 @@
     <body>
         {% include 'dashboard/navbar.html' %}
 
+        <!-- Block to contain all page content, which can be overwritten/extended in child templates -->
         {% block content %}
-
         {% endblock %}
 
         {% include 'dashboard/back_to_top_button.html' %}
