Working visualization, tooltip, horizontal line Also labeled all the axes. still, looks a bit weird to me

--- a/geothermalsite/dashboard/templates/dashboard/stratigraphy.html
+++ b/geothermalsite/dashboard/templates/dashboard/stratigraphy.html
@@ -43,7 +43,7 @@
 
     {% load static %}
 
-    <script src="{% static 'tempVsDepthGraph.js' %}" type="module"></script>
+    <script src="{% static 'stratigraphyGraph.js' %}" type="module"></script>
     <script>
         var queryData = {{ queryData | safe }};
         var graphData = {{ graphData | safe }};
