Added documentation page sections and footer homepage link

--- a/geothermalsite/dashboard/templates/dashboard/footer.html
+++ b/geothermalsite/dashboard/templates/dashboard/footer.html
@@ -42,7 +42,7 @@
               <a href="#!" class="text-dark">Home</a>
             </li>
             <li>
-              <a href="#!" class="text-dark">Geothermal</a>
+              <a href="{% url 'index' %}" class="text-dark">Geothermal</a>
             </li>
           </ul>
         </div>
