--- a/geothermalsite/dashboard/templates/dashboard/documentation.html
+++ b/geothermalsite/dashboard/templates/dashboard/documentation.html
@@ -12,7 +12,7 @@
     <div class="col-3">
       <div id="list-example" class="list-group">
         <a class="list-group-item list-group-item-action" href="#list-faq">FAQ</a>
-        <a class="list-group-item list-group-item-action" href="#list-data_summary">Data Summary</a>
+        <a class="list-group-item list-group-item-action" href="#list-data-summary">Data Summary</a>
         <a class="list-group-item list-group-item-action" href="#list-advanced-api">Advanced API Use</a>
       </div>
     </div>
