Changed website title in base template

--- a/geothermalsite/dashboard/templates/dashboard/base.html
+++ b/geothermalsite/dashboard/templates/dashboard/base.html
@@ -3,7 +3,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-        <title>Carleton Geothermal Data</title>
+        <title>Geothermal Dashboard</title>
 
         <!-- Include custom images, css, and js in the static directory -->
         {% load static %}
