--- a/geothermalsite/dashboard/templates/dashboard/navbar.html
+++ b/geothermalsite/dashboard/templates/dashboard/navbar.html
@@ -3,7 +3,9 @@
 
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
-      <a class="navbar-brand" href="{% url 'index' %}">Carleton Geothermal Dashboard</a>
+      <a class="navbar-brand" href="{% url 'index' %}">
+        <img class="logo" src="{% static 'Carleton-Closed-C-Ray-Wordmark-Left-Blue.png' %}" width="125" height="22">
+      </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
