initial styling of the stratigraphy

--- a/geothermalsite/dashboard/templates/dashboard/stratigraphy.html
+++ b/geothermalsite/dashboard/templates/dashboard/stratigraphy.html
@@ -21,7 +21,7 @@
 
 {% block content %}
     <h1>Stratigraphy</h1>
-    <button type="button" onclick="window.location.href='/'">Home</button>
+    {% comment %} <button type="button" onclick="window.location.href='/'">Home</button> {% endcomment %}
 
     {% if queryData %}
     <details>
