--- a/geothermalsite/dashboard/templates/dashboard/base.html
+++ b/geothermalsite/dashboard/templates/dashboard/base.html
@@ -34,7 +34,7 @@
         {% endblock %}
 
     </head>
-    <body>
+    <body class="cream-background">
         {% include 'dashboard/navbar.html' %}
 
         <!-- Block to contain all page content, which can be overwritten/extended in child templates -->
