--- a/geothermalsite/dashboard/templates/dashboard/navbar.html
+++ b/geothermalsite/dashboard/templates/dashboard/navbar.html
@@ -1,7 +1,7 @@
 {% load static %}
 <link rel="stylesheet" href="{% static 'navbar.css' %}">
 
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
+<nav class="navbar navbar-expand-lg bg-body-tertiary cream-background">
     <div class="container-fluid">
       <a class="navbar-brand" href="{% url 'index' %}">
         <img class="logo" src="{% static 'Carleton-Closed-C-Ray-Wordmark-Left-Blue.png' %}" width="125" height="22">
